__HEADER__(`Octave News Archive')

<div class="section">
<dl>
<dt>September 17, 2007</dt>
<dd>Version 2.9.14 is now available for ftp and is the new
"testing" (also "recommended") version.  As noted on the download
page, 2.9.14 is a pre-release version of Octave 3.0.  It is
significantly different from Octave 2.1.x, particularly with regard to
graphics, path handling, and built-in variables.  Please read the
__OCTAVE_HTTP__(`NEWS-3.html', `NEWS') file.
__MAIL_THREAD__(`maintainers', `2007', `September', `004002')</dd>
<dt>July 25, 2007</dt>
<dd>Version 2.9.13 is now available for ftp and is the new
"testing" (also "recommended") version.  As noted on the download
page, 2.9.13 is a pre-release version of Octave 3.0.  It is
significantly different from Octave 2.1.x, particularly with regard to
graphics, path handling, and built-in variables.  Please read the
__OCTAVE_HTTP__(`NEWS-3.html', `NEWS') file.
__MAIL_THREAD__(`maintainers', `2007', `July', `003572')</dd>
<dt>May 23, 2007</dt>
<dd>Version 2.9.12 is now available for ftp and is the new
"testing" (also "recommended") version.  As noted on the download
page, 2.9.12 is a pre-release version of Octave 3.0.  It is
significantly different from Octave 2.1.x, particularly with regard to
graphics, path handling, and built-in variables.  Please read the
__OCTAVE_HTTP__(`NEWS-3.html', `NEWS') file.
__MAIL_THREAD__(`maintainers', `2007', `May', `002949')</dd>
<dt>May 22, 2007</dt>
<dd>Version 2.9.11 is now available for ftp and is the new
"testing" (also "recommended") version.  As noted on the download
page, 2.9.11 is a pre-release version of Octave 3.0.  It is
significantly different from Octave 2.1.x, particularly with regard to
graphics, path handling, and built-in variables.  Please read the
__OCTAVE_HTTP__(`NEWS-3.html', `NEWS') file.
__MAIL_THREAD__(`maintainers', `2007', `May', `002932')</dd>
<dt>March 27, 2007</dt>
<dd>Version 2.9.10 is now available for ftp.