@@ -2,6 +2,14 @@ __HEADER__(`Octave News Archive')
 
 <div class="section">
 <dl>
+<dt>October 13, 2007</dt>
+<dd>Version 2.9.15 is now available for ftp and is the new
+"testing" (also "recommended") version.  As noted on the download
+page, 2.9.15 is a pre-release version of Octave 3.0.  It is
+significantly different from Octave 2.1.x, particularly with regard to
+graphics, path handling, and built-in variables.  Please read the
+__OCTAVE_HTTP__(`NEWS-3.html', `NEWS') file.
+__MAIL_THREAD__(`maintainers', `2007', `October', `004352')</dd>
 <dt>September 17, 2007</dt>
 <dd>Version 2.9.14 is now available for ftp and is the new
 "testing" (also "recommended") version.  As noted on the download
